# habit-tracker

./: db-init.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cleanup-packages.yml  deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 271eac7e4d57_add_psych_fields_safe.py  db7d812f5ddb_initial_tables.py  ec11a0100489_add_psych_fields_safe.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  habits.py  users.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: habit.py  user.py
backend/app/schemas/: habit.py  user.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/features/analytics/: AnalyticsPage.jsx
frontend/src/features/auth/: LoginPage.jsx  SignupPage.jsx
frontend/src/features/common/: ConfirmationModal.jsx
frontend/src/features/gamification/: PlantVisual.jsx  XPBar.jsx
frontend/src/features/habits/: CreateHabitModal.jsx  HabitCard.jsx  HabitHeatmap.jsx  HabitList.jsx
frontend/src/features/settings/: SettingsPage.jsx
frontend/src/lib/: api.js
